Added German translations

--- a/client/locales/de.json
+++ b/client/locales/de.json
@@ -1,22 +1,308 @@
 {
-  "poweredBy": "Powered by",
+  "404NotFound": "Nicht gefunden",
+  "404PageDoesNotExist": "Die angeforderte Seite existiert nicht",
+  "404ReturnHome": "Zurück zur Startseite",
+  "acc2FADisabled": "2FA deaktiviert",
+  "acc2FAEnabled": "2FA aktiviert",
+  "acc2FAScanQR": "Scannen sie den QR Code mit ihrer Authenticator App und geben Sie den Einmal-Code ein.",
+  "acc2FAText1": "2FA wurde erfolgreich aktiviert. Diese Backup codes können für den Login benutzt werden, falls Sie Zugriff auf ihre Authenticator App verlieren. Speichern Sie sie jetzt! Sie werden nicht noch einmal angezeigt werden.",
+  "acc2FAUseApp": "Nutzen Sie eine Authenticator App für eine zusätzliche Sicherung",
+  "acc2FAuth": "Zwei Faktor Authentifizierung",
+  "accBonusPoints": "Bonus Punkte",
+  "accBonusPointsHave": "Bonus Punkt(e)",
+  "accBuy": "Kaufen",
+  "accCancel": "Abbrechen",
+  "accChangePass": "Passwort ändern",
+  "accClaimed": "Beansprucht",
+  "accCopyLink": "Link kopieren",
+  "accCouldNotBuyItems": "Konnte keine Items kaufen",
+  "accCouldNotChangePass": "Konnte das Passwort nicht ändern",
+  "accCouldNotDelAcc": "Account konnte nicht gelöscht werden",
+  "accCouldNotSendInvite": "Einladung konnte nicht verschickt werden",
+  "accCouldNotToggle2FA": "Konnte 2FA nicht umschalten",
+  "accCreated": "Erstellt",
+  "accCurrentPass": "Aktuelles Passwort",
+  "accDangerZone": "Gefahrenzone",
+  "accDelAccText1": "Sind sie sicher, dass sie ihren Account löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden und Sie werden nicht in der Lage sein sich erneut zu registrieren. Ihre persönlichen Informationen werden gelöscht, aber ihre hochgeladenen Torrents verbleiben.",
+  "accDeleteMyAcc": "Lösche meinen Account",
+  "accDeleteMyAccYes": "Ja, lösche meinen Account",
+  "accDisable": "Deaktivieren",
+  "accEnable": "Aktivieren",
+  "accEnable2FA": "Aktiviere 2FA",
+  "accEveryRequestYouFulfill": "für jede Anfrage, die Sie erfüllen, oder",
+  "accForEveryGBYouUpload": "für jedes GB, das Sie hochladen",
+  "accIfYouAreAlsUploaderAcceptTorrent": "wenn Sie auch der Uploader des akzeptierten Torrents sind",
+  "accInviteLinkCopiedClipboard": "Einladungslink wurde in die Zwischenablage kopiert",
+  "accInvites": "Einladungen",
+  "accRemaining": "verbleibend",
+  "accRoleUser": "Rolle: Nutzer",
+  "accRoleAdmin": "Rolle: Admin",
+  "accInviteSentSuccess": "Einladung erfolgreich gesendet",
+  "accInviteText1": "Geben Sie eine E-Mail Adresse ein, um die Einladung zu senden. Der eingeladene Nutzer muss sich mit der selben E-Mail Addresse registrieren. Sobald die Einladung generiert ist, können sie auch einen direkten Link kopieren.",
+  "accItemsPurchasedSuccess": "Die Items wurden erfolgreich gekauft",
+  "accMyAccount": "Mein Account",
+  "accPassChangedSuccess": "Das Passwort wurde erfolgreich geändert",
+  "accPurchaseInvites": "Kaufe Einladungen",
+  "accPurchaseUpload1GB": "Kaufe Upload (1 GB)",
+  "accRole": "Rolle",
+  "accSendInvite": "Eine Einladung senden",
+  "accThisIsAdminAcc": "Dies ist ein Admin Account.",
+  "accValidUntil": "Gültig bis",
+  "accYouCurrentlyHave": "Sie haben aktuell",
+  "accYouWillEarn": "Sie werden verdienen",
+  "accNotAvailableToBuy": "Nicht zum Kauf verfügbar",
+  "annPinnedAnnounce": "Angepinnte Bekanntmachungen",
+  "annOtherAnnounce": "Andere Bekanntmachungen",
+  "annAnnounceCreatSuccess": "Bekanntmachung erfolgreich erstellt",
+  "annCouldNotCreateAnnounce": "Konnte Bekanntmachung nicht erstellen",
+  "annNewAnnounce": "Neue Bekanntmachung",
+  "annBody": "Inhalt",
+  "annPinThisAnnounceQ": "Diese Bekanntmachung pinnen?",
+  "annAllowCommentsQ": "Kommentare erlauben?",
+  "annCreateAnnounce": "Eine Bekanntmachung erstellen",
+  "annAnnounceDelSuccess": "Bekanntmachung wurde erfolgreich gelöscht",
+  "annCouldNotDelAnnounce": "Konnte Bekanntmachung nicht löschen",
+  "annUnpin": "Loslösen",
+  "annPin": "Pinnen",
+  "annUnpinned": "Losgelöst",
+  "annPinned": "Angepinnt",
+  "annLastUpdated": "Zuletzt aktualisiert",
+  "annCommentsDisabled": "Kommentare deaktiviert.",
+  "annAreYouSureYouWantToDelThisannounceQ": "Sind Sie sicher, dass sie diese Ankündigung löschen möchten? Dies kann nicht rückgängig gemacht werden.",
+  "annAnnounceUpdatedSuccess": "Die Ankündigung wurde erfolgreich aktualisiert",
+  "annCouldNotUpdateAnnounce": "Die Ankündigung konnte nicht aktualisiert werden",
+  "annEditAnnounce": "Ankündigung bearbeiten",
+  "annUpdateAnnounce": "Ankündigung aktualisieren",
+  "annAnnounce": "Ankündigung",
+  "bmYourBM": "Deine Lesezeichen",
+  "bmYouNotHaveAnyBM": "Du hast keine Lesezeichen.",
+  "catCategories": "Kategorien",
+  "catNoCategoryHaveBeenDefined": "Es wurden keine Kategorien festgelegt.",
+  "catNoTagsHaveBeenDefined": "Es wurden keine Tags definiert.",
+  "catNoResults": "Keine Ergebnisse.",
+  "comCommentBy": "Kommentar von",
+  "comDelUser": "Gelöschter Benutzer",
+  "comOn": "an",
+  "email": "Email",
+  "errSomethingWentWrong": "Etwas ist schief gelaufen",
+  "errTooManyRequests": "Zu viele Anfragen! Sie wurden limitiert. Bitte warten Sie eine kurze Zeit bevor Sie es erneut versuchen.",
+  "errIfErrorPersist": "Wenn der Fehler weiterhin besteht, bitte",
+  "errReportIt": "Melde ihn",
+  "errForNow": "Für jetzt,",
+  "indexLatestAnnounce": "Letzte Bekanntmachungen",
+  "indexLatestTorrents": "Letzte Torrents",
+  "indexSearch": "Suche",
+  "indexSearchTorrents": "Suche Torrents",
+  "indexText1": "Ihre E-Mail Adresse ist noch nicht verifiziert. Sie können keine Daten hoch / runterladen, bevor ihre E-Mail nicht verifiziert wurde.",
+  "indexTime": "HH:mm Do MMM YYYY",
+  "listNoItemShow": "Keine Items zum Anzeigen.",
   "logIn": "Anmelden",
-  "register": "Registrieren",
-  "email": "E-Mail",
-  "username": "Benutzername",
-  "usernameRules": "Nur Buchstaben, Zahlen, und “.” erlaubt.",
-  "password": "Passwort",
-  "totp": "Einmalpasswort",
-  "resetPassword": "Passwort zurücksetzen",
+  "logInFailed": "Anmeldung fehlgeschlagen",
+  "mdMarkdownPreview": "Markdown Vorschau",
+  "navAnnouncements": "Ankündigungen",
+  "navBookmarks": "Lesezeichen",
+  "navBrowse": "Durchsuchen",
+  "navHome": "Start",
+  "navLogOut": "Ausloggen",
+  "navReports": "Meldungen",
+  "navRequests": "Anfragen",
+  "navRSS": "RSS",
+  "navSearch": "Suche",
+  "navStats": "Statistiken",
+  "navUpload": "Upload",
+  "navWiki": "Wiki",
   "newPassword": "Neues Passwort",
-  "welcomeBack": "Willkommen zurück",
-  "logInFailed": "Anmeldung fehgeschlagen",
-  "welcome": "Willkommen",
+  "password": "Passwort",
+  "passwordResetFailed": "Das Zurücksetzen des Passworts konnte nicht abgeschlossen werden",
+  "passwordResetRequestFailed": "Das Zurücksetzen des Passworts konnte nicht eingeleitet werden",
+  "passwordResetRequestSuccess": "Wenn ein Konto mit dieser E-Mail-Adresse existiert, erhalten Sie in Kürze eine E-Mail",
+  "passwordResetSuccess": "Das Passwort wurde erfolgreich zurückgesetzt",
+  "poweredBy": "Powered by",
+  "register": "Registrieren",
   "registerFailed": "Registrierung fehlgeschlagen",
   "registrationClosed": "Registrierung geschlossen",
-  "passwordResetRequestSuccess": "Bestätigung versand, falls ein Konto mit dieser E-Mail Adresse existiert",
-  "passwordResetRequestFailed": "Passwort zurücksetzen konnte nicht initiallisiert werden",
-  "passwordResetSuccess": "Passwort wurde erfolgreich zurückgesetzt",
-  "passwordResetFailed": "Passwort wurde nicht erfolgreich zurückgesetzt",
-  "tokenError": "Token Fehler"
+  "reqCreateNew": "Erstelle Neu",
+  "reqCreateReq": "Erstelle Anfrage",
+  "reqTitle": "Titel",
+  "reqPostedBy": "Geschrieben von",
+  "reqPost": "Post",
+  "reqRequestCreatedSuccess": "Anfrage erfolgreich erstellt",
+  "reqCouldNotCreateReq": "Konnte Anfrage nicht erstellen",
+  "reqNewRequest": "Neue Anfrage",
+  "reqWhatYouLookForQ": "Nach was suchen Sie?",
+  "reqRequestDelSuccess": "Anfrage wurde erfolgreich gelöscht",
+  "reqCouldNotDelReq": "Anfrage konnte nicht gelöscht werden",
+  "reqCommentPostSuccess": "Kommentar wurde erfolgreich gepostet",
+  "reqCommentNotPost": "Kommentar konnte nicht gepostet werden",
+  "reqSuggestionAddSuccess": "Vorschlag erfolgreich hinzugefügt",
+  "reqSuggestionNotAdded": "Vorschlag konnte nicht hinzugefügt werden",
+  "reqSuggestionAcceptSuccess": "Vorschlag wurde erfolgreich akzeptiert",
+  "reqCouldNotAcceptSuggestion": "Vorschlag konnte nicht akzeptiert werden",
+  "reqDelete": "Löschen",
+  "reqSuggestedTorrents": "Vorgeschlagene Torrents",
+  "reqSuggestATorrent": "Schlag einen Torrent vor",
+  "reqAccepted": "Akzeptiert",
+  "reqAccept": "Akzeptieren",
+  "reqNoTorrentsHaveBeenSuggestedYet": "Es wurden noch keine Torrents vorgeschlagen.",
+  "reqPostAComment": "Poste einen Kommentar",
+  "reqEnterInfohashTorrentBelow": "Gib den Info Hash eines Torrens unten ein.",
+  "reqFulfilled": "Erfüllt",
+  "reqPosted": "Gesendet",
+  "reqBy": "von",
+  "reqInfohash": "Info Hash",
+  "reqSuggest": "Vorschlagen",
+  "repUnresolvedRep": "Ungelöste Berichte",
+  "repRepBy": "Gemeldet von",
+  "repReason": "Grund",
+  "repRepMarkSolved": "Meldung als gelöst markiert",
+  "repCouldNotResolveRep": "Die Meldung konnte nicht gelöst werden",
+  "repRepOn": "Berichten über",
+  "repMarkSolved": "Als gelöst markieren",
+  "repRep": "Gemeldet",
+  "repTorrDetail": "Torrent Einzelheiten",
+  "resetPassword": "Passwort zurücksetzen",
+  "rssThereRSSFeedAt": "Es gibt einen RSS Feed",
+  "rssToAuthenticateYourself": "Um sich zu authentifizieren, müssen Sie Ihre Cookies übermitteln",
+  "rssAnd": "und",
+  "rssToRSSEndpoint": "an den RSS-Endpunkt, der Ihren Benutzernamen bzw. Ihr Passwort enthält.",
+  "rssNoQueryParametersAreProvided": "Wenn keine Abfrageparameter angegeben werden, enthält der RSS-Feed die 100 neuesten Torrents.",
+  "rssOnlyIncludeMatchingResults": "Um nur passende Ergebnisse in den Feed aufzunehmen, können Sie Folgendes hinzufügen",
+  "rssQueryParameter": "Abfrageparameter, z.B.",
+  "searchSearchResults": "Suchergebnisse für",
+  "searchSearchError": "Suchfehler",
+  "statYouNotPermission": "Sie haben keine Erlaubnis dies zu tun.",
+  "statTrackerStat": "Tracker Statistiken",
+  "statActiveTorrents": "Aktive Torrents",
+  "statBannedUsers": "Gebannte Nutzer",
+  "statCompletedDownloads": "Abgeschlossene Downloads",
+  "statFilledRequests": "Erfüllte Anfragen",
+  "statInvitesAccepted": "Akzeptierte Einladungen",
+  "statLeechers": "Leechers",
+  "statPeers": "Peers",
+  "statRegisteredUsers": "Registrierte Nutzer",
+  "statSeeders": "Seeders",
+  "statTotalComments": "Alle Kommentare",
+  "statTotalInvitesSent": "Alle gesendeten Einladungen",
+  "statTotalRequests": "Alle Anfragen",
+  "statUploadedTorrents": "Hochgeladene Torrents",
+  "tagTaggedWith": "Markiert mit",
+  "tokenError": "Token Fehler",
+  "torrSeeders": "Seeders",
+  "torrLeechers": "Leechers",
+  "torrDownloads": "Downloads",
+  "torrUploaded": "Hochgeladen",
+  "torrTorrEditSuccess": "Torrent erfolgreich bearbeitet",
+  "torrCouldEditTorr": "Konnte den Torrent nicht bearbeiten",
+  "torrTorrDelSuccess": "Torrent wurde erfolgreich gelöscht",
+  "torrCouldNotDelTorr": "Torrent konnte nicht gelöscht werden",
+  "torrVoteSubmitSuccess": "Abstimmung erfolgreich eingereicht",
+  "torrCouldNotSubmitVote": "Stimme konnte nicht abgegeben werden.",
+  "torrReportSubmitSuccess": "Meldung erfolgreich eingereicht",
+  "torrCouldNotSubmitReport": "Meldung konnte nicht eingereicht werden",
+  "torrFLToggleSuccess": "Freeleech erfolgreich umgeschaltet",
+  "torrCouldNotToggleFL": "Konnte freeleech nicht umschalten",
+  "torrTorrRemFromGroupSuccess": "Der Torrent wurde von der Gruppe entfernt",
+  "torrCouldNotRemTorrFromGroup": "Konnte den Torrent nicht von der Gruppe entfernen",
+  "torrTorrent": "Torrent",
+  "torrCouldNotBookmarkTorr": "Torrent konnte nicht als Lesezeichen gespeichert werden",
+  "torrFL": "FL!",
+  "torrEdit": "Bearbeiten",
+  "torrDownload": "Herunterladen",
+  "torrLogInDownload": "Einloggen zum Herunterladen",
+  "torrFiles": "Dateien",
+  "torrReport": "Melden",
+  "torrRemTorr": "Entferne diesen Torrent",
+  "torrAddTorr": "Einen Torrent hinzufügen",
+  "torrReasonForReport": "Grund für Meldung",
+  "torrSureDeleteTorr": "Sind Sie sich sicher, dass Sie den Torrent löschen möchten? Dies kann nicht rückgängig gemacht werden.",
+  "torrFreeleech": "Freeleech",
+  "torrUnset": "Unset",
+  "torrSet": "Set",
+  "torrUploadedBy": "Hochgeladen von",
+  "torrDate": "Datum",
+  "torrSize": "Größe",
+  "torrYes": "Ja",
+  "torrNo": "Nein",
+  "torrGroupTorr": "Gruppierte Torrents",
+  "torrThereAreNoOtherTorrGroup": "Es sind keine anderen Torrents in dieser Gruppe.",
+  "torrResults": "Ergebnisse",
+  "torrPage": "Seite",
+  "torrOf": "von",
+  "torrRemovedFrom": "entfernt von",
+  "torrAddedTo": "hinzugefügt zu",
+  "torrTorrNoTags": "Dieser Torrent hat keine Markierung.",
+  "totp": "Einmal code",
+  "uploadAddTag": "Füge eine Markierung hinzu",
+  "uploadAnnounceURL": "Announce URL",
+  "uploadAnonymousUpload": "Anonymer Upload",
+  "uploadCategory": "Kategorie",
+  "uploadCouldNotGetGroupSuggestions": "Es konnten keine Gruppenvorschläge abgerufen werden",
+  "uploadCouldNotUploadFile": "Die Datei konnte nicht hochgeladen werden",
+  "uploadCouldNotUploadTorrent": "Konnte .torrent nicht hochladen",
+  "uploadDescription": "Beschreibung",
+  "uploadDragDropClickSelect": "Ziehen Sie die Torrent-Datei per Drag-and-Drop hierher oder klicken Sie, um sie auszuwählen",
+  "uploadDropFileHere": "Legen Sie die Datei hier ab...",
+  "uploadGroupWith": "Gruppe mit",
+  "uploadGroupWithThisTorrent": "Gruppe mit diesem Torrent",
+  "uploadInfoBox1": "Die folgenden Dateierweiterungen stehen auf der schwarzen Liste. Torrents, die Dateien dieser Art enthalten, werden nicht hochgeladen.",
+  "uploadInfoBox2": "Es sieht so aus, als hätten diese vorhandenen Torrents ähnliche Namen. Möchten Sie Ihren Upload mit einem davon gruppieren? Gruppen sollten nur sehr ähnliche Inhalte enthalten, z.B. den gleichen Film in verschiedenen Formaten.",
+  "uploadInfoBox3": "Hinweis: Wenn Sie vor dem Hochladen mit dem Seeding eines Torrents begonnen haben, müssen Sie möglicherweise die Tracker in Ihrem Torrent-Client aktualisieren, sobald der Upload abgeschlossen ist.",
+  "uploadMarkdownSupport": "Markdown unterstützt",
+  "uploadMediaInfo": "Medien Information",
+  "uploadName": "Name",
+  "uploadSource": "Quelle",
+  "uploadTags": "Markierungen",
+  "uploadTorrentFile": "Torrent Datei",
+  "uploadTorrentUploadSuccess": "Torrent erfolgreich hochgeladen",
+  "uploadUpload": "Hochladen",
+  "uploadRemove": "Entfernen",
+  "username": "Nutzername",
+  "userUser": "Nutzer",
+  "userSuccessfully": "erfolgreich",
+  "userCouldNot": "Konnte nicht",
+  "userProfile": "Profil",
+  "userUserSince": "Nutzer seit",
+  "userUserSinceTime": "Do MMM YYYY",
+  "userOnlyAdminsSee": "Nur Admins können dies sehen",
+  "userInvitedBy": "Eingeladen von",
+  "userEmailVerified": "Email verifiziert",
+  "userRemainingInvites": "Verbleibende Einladungen",
+  "userRatio": "Ratio",
+  "userHitNRuns": "Hit'n'runs",
+  "userDownloaded": "Heruntergeladen",
+  "userComments": "Kommentare",
+  "userNoComments": "Keine Kommentare.",
+  "userYouSureWant": "Sind Sie sicher, dass Sie das möchten?",
+  "userThisUserQ": "dieser Nutzer??",
+  "userUploaded": "Hochgeladen",
+  "userMyUploads": "Meine Uploads",
+  "usernameRules": "Darf nur aus Buchstaben, Zahlen und „.“ bestehen.“",
+  "userUnban": "entsperren",
+  "userBan": "sperren",
+  "userUnbanned": "entsperrt",
+  "userBanned": "gesperrt",
+  "userAdmin": "Admin",
+  "veCouldNotVerifyEmailAddress": "Konnte diese E-Mail Adresse nicht verifizieren:",
+  "veEmailAddressVerifiedSuccess": "E-Mail wurde erfolgreich verifiziert.",
+  "veNoVerificationTokenProvided": "Kein Verifizierungs-Token angegeben",
+  "veVerifyEmail": "Verifiziere E-Mail",
+  "welcome": "Willkommen",
+  "welcomeBack": "Willkommen zurück",
+  "wikiPath": "Pfad",
+  "wikiPageWillBeVisibleAt": "Die Seite wird sichtbar sein am",
+  "wikiAllowUnregisteredView": "Nicht registrierte Ansicht zulassen",
+  "wikiPageCreateSuccess": "Wiki-Seite erfolgreich erstellt",
+  "wikiCouldNotCreatePage": "Konnte die Wiki-Seite nicht erstellen",
+  "wikiNewPage": "Neue Wiki-Seite",
+  "wikiCreatePage": "Erstelle Wiki-Seite",
+  "wikiPageDelSuccess": "Wiki-Seite wurde erfolgreich gelöscht",
+  "wikiCouldNotDelPage": "Konnte die Wiki-Seite nicht löschen",
+  "wikiPageUpdateSuccess": "Die Wiki-Seite wurde erfolgreich aktualisiert",
+  "wikiCouldNotUpdatePage": "Die Wiki-Seite konnte nicht aktualisiert werden",
+  "wikiAddPage": "Füge eine Seite hinzu",
+  "wikiLastEdited": "Zuletzt geändert",
+  "wikiPages": "Seiten",
+  "wikiSaveChanges": "Änderungen speichern",
+  "wikiThereNothingHereYet": "Hier ist noch nichts",
+  "wikiDelThisPageQ": "Sind Sie sicher, dass Sie diese Wiki-Seite löschen möchten? Das kann nicht rückgängig gemacht werden."
 }
