cover image tweaks

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -242,7 +242,7 @@
   "uploadCouldNotUploadTorrent": "Could not upload .torrent",
   "uploadDescription": "Description",
   "uploadDragDropClickSelect": "Drag and drop .torrent file here, or click to select",
-  "uploadDragDropClickSelectPoster": "Drag and drop your poster file here, or click to select",
+  "uploadDragDropClickSelectPoster": "Drag and drop your cover image here, or click to select",
   "uploadDropFileHere": "Drop the file here...",
   "uploadGroupWith": "Group with",
   "uploadGroupWithThisTorrent": "Group with this torrent",
@@ -252,7 +252,6 @@
   "uploadMarkdownSupport": "Markdown supported",
   "uploadMediaInfo": "MediaInfo",
   "uploadName": "Name",
-  "uploadPosterImage": "Poster file",
   "uploadSource": "Source",
   "uploadTags": "Tags",
   "uploadTorrentFile": "Torrent file",
