--- a/client/locales/zh.json
+++ b/client/locales/zh.json
@@ -34,6 +34,9 @@
   "accIfYouAreAlsUploaderAcceptTorrent": "分，需要您同时也是被采纳种子的发种人",
   "accInviteLinkCopiedClipboard": "邀请链接已复制到剪贴板",
   "accInvites": "邀请",
+  "accRemaining": "剩余",
+  "accRoleUser": "角色: 用户",
+  "accRoleAdmin": "角色: 管理员",
   "accInviteSentSuccess": "邀请已成功发送",
   "accInviteText1": "请输入受邀用户的邮箱地址。受邀用户需使用该邮箱地址注册。您也可以在此直接复制邀请链接。",
   "accItemsPurchasedSuccess": "购买成功",
@@ -70,6 +73,7 @@
   "annCouldNotUpdateAnnounce": "无法更新公告",
   "annEditAnnounce": "编辑公告",
   "annUpdateAnnounce": "更新公告",
+  "annAnnounce": "公告",
   "bmYourBM": "您的书签",
   "bmYouNotHaveAnyBM": "您没有任何书签。",
   "catCategories": "分类",
@@ -222,6 +226,12 @@
   "torrNo": "否",
   "torrGroupTorr": "已分组的种子",
   "torrThereAreNoOtherTorrGroup": "此组中没有其他种子。",
+  "torrResults": "结果",
+  "torrPage": "页面",
+  "torrOf": "的",
+  "torrRemovedFrom": "移除于",
+  "torrAddedTo": "增加至",
+  "torrTorrNoTags": "这个种子还没有标签",
   "totp": "一次性代码",
   "uploadAddTag": "添加标签",
   "uploadAnnounceURL": "Tracker地址",
@@ -247,6 +257,7 @@
   "uploadTorrentFile": "Torrent 文件",
   "uploadTorrentUploadSuccess": "Torrent 上传成功",
   "uploadUpload": "上传",
+  "uploadRemove": "移除",
   "username": "用户名",
   "userUser": "用户",
   "userSuccessfully": "成功",
@@ -259,6 +270,7 @@
   "userEmailVerified": "邮箱已验证",
   "userRemainingInvites": "剩余邀请",
   "userRatio": "分享率",
+  "userHitNRuns": "H&R",
   "userDownloaded": "已下载",
   "userComments": "评论",
   "userNoComments": "无评论。",
@@ -271,6 +283,7 @@
   "userBan": "封禁",
   "userUnbanned": "已解封",
   "userBanned": "已封禁",
+  "userAdmin": "设为管理",
   "veCouldNotVerifyEmailAddress": "无法验证邮件地址：",
   "veEmailAddressVerifiedSuccess": "邮箱地址验证成功。",
   "veNoVerificationTokenProvided": "未提供验证令牌",
