adds setting to disable email/smtp

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -31,14 +31,16 @@
   "accEnable2FA": "Enable 2FA",
   "accEveryRequestYouFulfill": "for every request you fulfill, or",
   "accForEveryGBYouUpload": "for every GB you upload",
-  "accIfYouAreAlsUploaderAcceptTorrent": "if you are als the uploader of the accepted torrent",
+  "accIfYouAreAlsUploaderAcceptTorrent": "if you are also the uploader of the accepted torrent",
   "accInviteLinkCopiedClipboard": "Invite link copied to clipboard",
   "accInvites": "Invites",
   "accRemaining": "remaining",
   "accRoleUser": "Role: user",
   "accRoleAdmin": "Role: admin",
   "accInviteSentSuccess": "Invite sent successfully",
+  "accInviteSentSuccessNoEmail": "Invite created successfully",
   "accInviteText1": "Enter an email address to send an invite. The invited user will need to sign up with the same email address. Once the invite is generated, you can also copy a direct invite link.",
+  "accInviteText1NoEmail": "Enter an email address to generate an invite. The invited user will need to sign up with the same email address. This tracker has email sending disabled, so you will need to copy and send the invite link yourself.",
   "accItemsPurchasedSuccess": "Items purchased successfully",
   "accMyAccount": "My account",
   "accPassChangedSuccess": "Password changed successfully",
@@ -46,6 +48,7 @@
   "accPurchaseUpload1GB": "Purchase upload (1 GB)",
   "accRole": "Role",
   "accSendInvite": "Send invite",
+  "accSendInviteNoEmail": "Create invite",
   "accThisIsAdminAcc": "This is an admin account.",
   "accValidUntil": "Valid until",
   "accYouCurrentlyHave": "You currently have",
@@ -279,8 +282,8 @@
   "userUploaded": "Uploaded",
   "userMyUploads": "My uploads",
   "usernameRules": "Can only consist of letters, numbers, and “.”",
-  "userUnban": "unban",
-  "userBan": "ban",
+  "userUnban": "Unban",
+  "userBan": "Ban",
   "userUnbanned": "unbanned",
   "userBanned": "banned",
   "userAdmin": "Admin",
